<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
            android:shortcutId="capsules_shortcut"
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_arrow_right_alt"
            android:shortcutShortLabel="@string/label_capsules"
            android:shortcutLongLabel="@string/label_capsules">

        <intent
                android:action="io.github.omisie11.spacexfollower.SHORTCUT_CAPSULES"
                android:targetPackage="io.github.omisie11.spacexfollower"
                android:targetClass="io.github.omisie11.spacexfollower.ui.MainActivity"/>
    </shortcut>

    <shortcut
            android:shortcutId="cores_shortcut"
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_arrow_right_alt"
            android:shortcutShortLabel="@string/label_cores"
            android:shortcutLongLabel="@string/label_cores">

        <intent
                android:action="io.github.omisie11.spacexfollower.SHORTCUT_CORES"
                android:targetPackage="io.github.omisie11.spacexfollower"
                android:targetClass="io.github.omisie11.spacexfollower.ui.MainActivity"/>
    </shortcut>

    <shortcut
            android:shortcutId="company_shortcut"
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_arrow_right_alt"
            android:shortcutShortLabel="@string/label_company"
            android:shortcutLongLabel="@string/label_company">

        <intent
                android:action="io.github.omisie11.spacexfollower.SHORTCUT_COMPANY"
                android:targetPackage="io.github.omisie11.spacexfollower"
                android:targetClass="io.github.omisie11.spacexfollower.ui.MainActivity"/>
    </shortcut>

</shortcuts>